<resources>
    <!--    general    -->
    <string name="app_name">Projet_mobile</string>
    <string name="url">https://projet-mobile-kao.herokuapp.com/</string>

    <string name="textInscription">INSCRIPTION</string>
    <string name="textAuthentification">AUTHENTIFICATION</string>
    <string name="textEmail">Email :</string>
    <string name="editEmail">Email</string>
    <string name="textMotDePasse">Mot de passe(*) :</string>
    <string name="editMotDePasse">Mot de passe</string>
    <string name="editMotDePasse2">Confirmer le mot de passe</string>
    <string name="textTelephone">Téléphone :</string>
    <string name="editTelephone">Téléphone</string>

    <!--    button    -->
    <string name="buttonRecherche">Rechercher</string>
    <string name="buttonValider">Valider</string>
    <string name="buttonConnecter">Connecter</string>
    <string name="buttonCreer">creer un compte</string>
    <string name="buttonModifier">Modifier</string>
    <string name="buttonChanger">Changer</string>
    <string name="buttonRenvoyer">Renvoyer</string>
    <string name="buttonSouscrire">Souscrire</string>


    <!--    accueil-->
    <string name="textAccType">Vous recherchez un </string>
    <string-array name="spinnerAccType">
        <item>job</item>
        <item>employe</item>
    </string-array>
    <string name="editAccSpecialite">Metier, mot-cles ...</string>
    <string name="editAccLieu">Lieu</string>


    <!--    inscription-->
    <string name="textInsPrenom">Prénom(*) :</string>
    <string name="editInsPrenom">Prénom</string>
    <string name="textInsNom">Nom(*) :</string>
    <string name="editInsNom">Nom</string>
    <string name="textInsNationalite">Nationalite :</string>
    <string name="editInsNationalite">Nationalite</string>
    <string name="textInsDateNais">Date Naissance :</string>
    <string name="editInsDateNais">Date Naissance</string>
    <string name="textInsVille">Ville :</string>
    <string name="editInsVille">Ville</string>
    <string name="textInsCV">CV : </string>
    <string name="editInsCV">Choisir un fichier</string>
    <string name="textInsConfirmation">Confirmez-vous les champs saisi ?</string>
    <string name="textInsOui">Oui</string>
    <string name="textInsNon">Non</string>
    <string name="textInsEnvoie">Information envoye</string>
    <string name="textInsCouleurEdit">Changer la couleur des champs d\'edition en sarcelle</string>
    <string name="textInsCouleurFond">Changer la couleur de fond en cyan clair</string>
    <string name="textInsAffichage">Affichage des données</string>

    <!--    Ins Validation-->
    <string name="textInsValTitre">VALIDATION</string>
    <string name="editInsValCode">Code</string>

    <!--    authentifiction-->
    <string name="textAuthRole">Se connecter en tant que : </string>
    <string-array name="spinnerAuthRole">
        <item>candidat</item>
        <item>employeur</item>
        <item>agence</item>
        <item>gestionnaire</item>
    </string-array>

    <string name="textAuthIdentifiant">Identifiant(*) :</string>
    <string name="editAuthIdentifiant">Adresse mail ou telephone</string>
    <string name="textAuthKao">KAO INTERIM</string>

    <!--    inscription Employer-->
    <string name="textIENomEntr">Nom Entreprise(*) :</string>
    <string name="editIENomEntr">Nom de l\'entreprise</string>
    <string name="textIENomSer">Nom Serv/dép (*) :</string>
    <string name="editIESer">Nom d\'un service ou d\'un département</string>
    <string name="textIENomSousSer">Nom Sous Serv/dép :</string>
    <string name="editIESousSer">Nom d\'un sous service ou d\'un sous département</string>
    <string name="textIENumeroNationale">Numéro nationale (*) :</string>
    <string name="editIENumeroNationale">Numéro nationale</string>
    <string name="textIENomC1">Nom contact1 :</string>
    <string name="editIENomC1">Nom personne contact 1</string>
    <string name="textIENomC2">Nom contact2 :</string>
    <string name="editIENomC2">Nom personne contact 2</string>
    <string name="textIEEmail1">Email1 (*) :</string>
    <string name="editIEEmail1">Adresse mail 1</string>
    <string name="textIEEmail2">Email2 :</string>
    <string name="editIEEmail2">Adresse mail 2</string>
    <string name="textIEAdresse">Adresse (*) :</string>
    <string name="editIEAdresse">Adresse</string>
    <string name="textIELiens">Liens : </string>
    <string name="editIELiens">Liens publics de l’employeur</string>

    <!--    Abonnement -->
    <string name="textAbon1">Abonnement ponctuel</string>
    <string name="textAbon2">Abonnement un mois</string>
    <string name="textAbon3">Abonnement un trimestre</string>
    <string name="textAbon4">Abonnement un semestre</string>
    <string name="textAbon5">Abonnement une année</string>
    <string name="textAbon6">Abonnement indéterminé</string>
    <string name="textAbonCond1">Conditions: \nAvantages: \nDésabonnement:</string>
    <string name="textAbonCond2">Conditions: \nAvantages: \nDésabonnement:</string>
    <string name="textAbonCond3">Conditions: \nAvantages: \nDésabonnement:</string>
    <string name="textAbonCond4">Conditions: \nAvantages: \nDésabonnement:</string>
    <string name="textAbonCond5">Conditions: \nAvantages: \nDésabonnement:</string>
    <string name="textAbonCond6">Conditions: \nAvantages: \nDésabonnement:</string>

    <string-array name="spinnerCandidature">
        <item>Cand. en cours et sans reponse</item>
        <item>Cand. en cours acceptees</item>
        <item>Cand. en cours non acceptees</item>
        <item>Cand. passees</item>
        <item>Cand. potentielles</item>
    </string-array>

    <string-array name="spinnerCandidatureEmp">
        <item>Consulter les candidatures</item>
        <item>Chercher une candidature</item>
    </string-array>

    <string name="textNon">Nous n\'avons pas encore ces horaires !!</string>
    <string name="textMois">Fevrier 20-16</string>
    <string name="textAjouter">Ajouter</string>
    <string name="textTitre">Ajouter un evenement</string>
    <string name="text1">Titre : </string>
    <string name="text2">Heure debut : </string>
    <string name="text3">Heure fin : </string>
    <string name="text4">Jour : </string>
    <string name="j1">Lun</string>
    <string name="j2">Mar</string>
    <string name="j3">Mer</string>
    <string name="j4">Jeu</string>
    <string name="j5">Ven</string>
    <string name="j6">Sam</string>
    <string name="j7">Dim</string>
    <string name="textFormImcomplet">Tous les champs sont pas remplis !!</string>
    <string-array name="jours">
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
    </string-array>

    <string-array name="spinnerPartage">
        <item>Par SMS</item>
        <item>Partager avec une personne</item>
        <item>Partager avec un groupe</item>
    </string-array>

    <string-array name="spinnerGroupe">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>