<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond4"
    tools:context=".Controler.AuthentificationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/icone_auth"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="155dp"
                tools:layout_editor_absoluteY="86dp"
                app:tint="#FFFFFF" />

            <TextView
                android:id="@+id/textErreur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/rouge"
                android:textSize="18sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="211dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/textAuthentification"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:cardCornerRadius="25dp"
            app:cardElevation="15dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="19dp"
            android:background="@color/back"
            android:layout_below="@id/layout1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/col2"
                        android:textStyle="bold"
                        android:text="@string/textAuthRole"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/editRole"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/spinnerAuthRole"
                        android:textSize="25sp"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textAuthIdentifiant"
                        android:textColor="@color/col2"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editIdentifiant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/editAuthIdentifiant"
                        android:inputType="textPersonName"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textMotDePasse"
                        android:textColor="@color/col2"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/editMotDePasse"
                        android:inputType="textPassword"
                        android:textSize="16sp" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/col2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <Button
                        android:id="@+id/buttonValider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/col"
                        android:text="@string/buttonValider" />

                    <Button
                        android:id="@+id/buttoncreer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@color/white"
                        android:text="@string/buttonCreer"
                        android:textColor="@color/col2"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>